build: finalise palantir formatter rollout